--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -15,9 +16,26 @@
         </ul>
     </nav>
 
-    <h1>About Me</h1>
-    <p>I am a PhD student in Evolutionary Biology. My research focuses on...</p>
-    <iframe src="cv.pdf" width="100%" height="600px"></iframe>
+    <section class="about-container">
+        <div class="about-text">
+            <h1>About Me</h1>
+            <p>I am a PhD student in Evolutionary Biology, passionate about understanding the mechanisms driving species adaptation and evolution.</p>
+
+            <div class="cta-buttons">
+                <a href="https://scholar.google.com" target="_blank" class="cta-button">Find me on Google Scholar →</a>
+                <a href="https://www.researchgate.net" target="_blank" class="cta-button">Find me on ResearchGate →</a>
+            </div>
+        </div>
+
+        <div class="about-image">
+            <img src="images/profile.jpg" alt="My Photo">
+        </div>
+    </section>
+
+    <section class="cv-container">
+        <h2>Curriculum Vitae</h2>
+        <iframe src="cv.pdf" width="100%" height="600px"></iframe>
+    </section>
 
 </body>
 </html>
