--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
     <script defer src="script.js"></script>
 </head>
 <body>
-
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About Me</a></li>
-            <li><a href="lab-notebook.html">Lab Notebook</a></li>
-            <li><a href="posts.html">Posts</a></li>
-        </ul>
-    </nav>
+<nav>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About Me</a></li>
+        <li><a href="lab-notebook.html">Lab Notebook</a></li>
+        <li><a href="posts.html">Posts</a></li>
+        <li><a href="gallery.html">Gallery</a></li>
+    </ul>
+</nav>
 
     <header>
         <img src="images/header.jpg" alt="Research Image">
