--- a/posts.html
+++ b/posts.html
@@ -8,13 +8,16 @@
     <script defer src="script.js"></script>
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About Me</a></li>
-            <li><a href="lab-notebook.html">Lab Notebook</a></li>
-        </ul>
-    </nav>
+<nav>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About Me</a></li>
+        <li><a href="lab-notebook.html">Lab Notebook</a></li>
+        <li><a href="posts.html">Posts</a></li>
+        <li><a href="gallery.html">Gallery</a></li>
+    </ul>
+</nav>
+
 
     <h1>Posts</h1>
     <input type="text" id="search" placeholder="Search posts by keyword or date" onkeyup="filterEntries()">
