--- a/about.html
+++ b/about.html
@@ -7,14 +7,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<nav>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About Me</a></li>
+        <li><a href="lab-notebook.html">Lab Notebook</a></li>
+        <li><a href="posts.html">Posts</a></li>
+        <li><a href="gallery.html">Gallery</a></li>
+    </ul>
+</nav>
 
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="lab-notebook.html">Lab Notebook</a></li>
-            <li><a href="posts.html">Posts</a></li>
-        </ul>
-    </nav>
 
     <section class="about-container">
         <div class="about-text">
