--- a/about.html
+++ b/about.html
@@ -9,15 +9,13 @@
 <body>
 <nav>
     <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About Me</a></li>
-        <li><a href="lab-notebook.html">Lab Notebook</a></li>
-        <li><a href="posts.html">Posts</a></li>
-        <li><a href="gallery.html">Gallery</a></li>
+        <li><a href="/Research_Notes/index.html">Home</a></li>
+        <li><a href="/Research_Notes/about.html">About Me</a></li>
+        <li><a href="/Research_Notes/lab-notebook.html">Lab Notebook</a></li>
+        <li><a href="/Research_Notes/posts.html">Posts</a></li>
+        <li><a href="/Research_Notes/gallery.html">Gallery</a></li>
     </ul>
 </nav>
-
-
     <section class="about-container">
         <div class="about-text">
             <h1>About Me</h1>
