--- a/index.html
+++ b/index.html
@@ -10,14 +10,13 @@
 <body>
 <nav>
     <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About Me</a></li>
-        <li><a href="lab-notebook.html">Lab Notebook</a></li>
-        <li><a href="posts.html">Posts</a></li>
-        <li><a href="gallery.html">Gallery</a></li>
+        <li><a href="/Research_Notes/index.html">Home</a></li>
+        <li><a href="/Research_Notes/about.html">About Me</a></li>
+        <li><a href="/Research_Notes/lab-notebook.html">Lab Notebook</a></li>
+        <li><a href="/Research_Notes/posts.html">Posts</a></li>
+        <li><a href="/Research_Notes/gallery.html">Gallery</a></li>
     </ul>
 </nav>
-
     <header>
         <img src="images/header.jpg" alt="Research Image">
         <h1>Welcome to My Research Page</h1>
