--- a/lab-notebook.html
+++ b/lab-notebook.html
@@ -10,11 +10,11 @@
 <body>
 <nav>
     <ul>
-        <li><a href="/Research_Notes/index.html">Home</a></li>
-        <li><a href="/Research_Notes/about.html">About Me</a></li>
-        <li><a href="/Research_Notes/lab-notebook.html">Lab Notebook</a></li>
-        <li><a href="/Research_Notes/posts.html">Posts</a></li>
-        <li><a href="/Research_Notes/gallery.html">Gallery</a></li>
+        <li><a href="/Research_Notes/index.html">HOME</a></li>
+        <li><a href="/Research_Notes/about.html">ABOUT</a></li>
+        <li><a href="/Research_Notes/lab-notebook.html">NOTEBOOK</a></li>
+        <li><a href="/Research_Notes/posts.html">UPDATES</a></li> <!-- Change 'UPDATES' to your preferred name -->
+        <li><a href="/Research_Notes/gallery.html">GALLERY</a></li>
     </ul>
 </nav>
     <h1>Lab Notebook</h1>
