--- a/about.html
+++ b/about.html
@@ -16,21 +16,21 @@
         <li><a href="/Research_Notes/gallery.html">GALLERY</a></li>
     </ul>
 </nav>
-    <section class="about-container">
-        <div class="about-text">
-            <h1>About Me</h1>
-            <p>I am a PhD student in Evolutionary Biology, passionate about understanding the mechanisms driving species adaptation and evolution.</p>
+<section class="about-container">
+    <div class="about-text">
+        <h1>Hey There!</h1>
+        <p>I am a PhD student in Evolutionary Biology, passionate about understanding the mechanisms driving species adaptation and evolution.</p>
 
-            <div class="cta-buttons">
-                <a href="https://scholar.google.com" target="_blank" class="cta-button">Find me on Google Scholar →</a>
-                <a href="https://www.researchgate.net" target="_blank" class="cta-button">Find me on ResearchGate →</a>
-            </div>
+        <div class="cta-buttons">
+            <a href="https://scholar.google.com" target="_blank" class="cta-button">Find me on Google Scholar →</a>
+            <a href="https://www.researchgate.net" target="_blank" class="cta-button">Find me on ResearchGate →</a>
         </div>
+    </div>
 
-        <div class="about-image">
-            <img src="images/profile.jpg" alt="My Photo">
-        </div>
-    </section>
+    <div class="about-image">
+        <img src="images/profile.jpg" alt="My Photo">
+    </div>
+</section>
 
     <section class="cv-container">
         <h2>Curriculum Vitae</h2>
