--- a/index.html
+++ b/index.html
@@ -3,25 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PhD in Evolutionary Biology</title>
+    <title>Home</title>
     <link rel="stylesheet" href="style.css">
-    <script defer src="script.js"></script>
 </head>
 <body>
+
 <nav>
     <ul>
-        <li><a href="/Research_Notes/index.html">HOME</a></li>
-        <li><a href="/Research_Notes/about.html">ABOUT</a></li>
-        <li><a href="/Research_Notes/lab-notebook.html">NOTEBOOK</a></li>
-        <li><a href="/Research_Notes/posts.html">UPDATES</a></li> <!-- Change 'UPDATES' to your preferred name -->
-        <li><a href="/Research_Notes/gallery.html">GALLERY</a></li>
+        <li><a href="index.html">HOME</a></li>
+        <li><a href="about.html">ABOUT</a></li>
+        <li><a href="lab-notebook.html">NOTEBOOK</a></li>
+        <li><a href="posts.html">UPDATES</a></li>
+        <li><a href="gallery.html">GALLERY</a></li>
     </ul>
 </nav>
-    <header>
-        <img src="images/header.jpg" alt="Research Image">
-        <h1>Welcome to My Research Page</h1>
-        <p>Follow my journey as a PhD student in Evolutionary Biology.</p>
-    </header>
+
+<!-- Splash Page -->
+<section class="splash-container">
+    <div class="splash-text">
+        Welcome to My Research! Exploring the wonders of marine biology.
+    </div>
+</section>
 
 </body>
 </html>
