--- a/posts.html
+++ b/posts.html
@@ -24,7 +24,7 @@
     
     <div id="posts-container"></div> <!-- Modern layout -->
 
-    <!-- Modal for viewing full post -->
+    <!-- Correct Single Modal -->
     <div id="post-modal" class="modal">
         <div class="modal-content">
             <span class="close-btn" onclick="closePost()">&times;</span>
@@ -36,12 +36,3 @@
 
 </body>
 </html>
-<!-- Modal for Post Display -->
-<div id="post-modal" class="modal">
-    <div class="modal-content">
-        <span class="close-btn" onclick="closePost()">&times;</span>
-        <h2 id="modal-title"></h2>
-        <p id="modal-date"></p>
-        <div id="modal-content"></div>
-    </div>
-</div>
