--- a/about.html
+++ b/about.html
@@ -21,10 +21,11 @@
         <h1>Hey There!</h1>
         <p>I am a PhD student in Evolutionary Biology, passionate about understanding the mechanisms driving species adaptation and evolution.</p>
 
-        <div class="cta-buttons">
-            <a href="https://scholar.google.com" target="_blank" class="cta-button">Find me on Google Scholar →</a>
-            <a href="https://www.researchgate.net" target="_blank" class="cta-button">Find me on ResearchGate →</a>
-        </div>
+       <div class="cta-buttons">
+    <a href="YOUR_GOOGLE_SCHOLAR_LINK" class="cta-button">Find me on Google Scholar →</a>
+    <a href="YOUR_RESEARCHGATE_LINK" class="cta-button">Find me on ResearchGate →</a>
+</div>
+
     </div>
 
     <div class="about-image">
