--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
     </div>
 
     <div class="about-image">
-        <img src="images/profile.jpg" alt="My Photo">
+        <img src="https://drive.google.com/uc?export=view&id=1haZA-bNiSCq-AK4o5D5f50JwMvKnJyFo" alt="About Me">
     </div>
 </section>
 
