--- a/gallery.html
+++ b/gallery.html
@@ -27,20 +27,12 @@
     <!-- Images Section -->
     <h2>Images</h2>
     <hr>
-    <div class="gallery-grid">
-        <img src="images/gallery/research1.jpg" alt="Research Image 1" class="gallery-item" onclick="openLightbox(0)">
-        <img src="images/gallery/research2.jpg" alt="Research Image 2" class="gallery-item" onclick="openLightbox(1)">
-    </div>
+    <div class="gallery-grid" id="image-gallery"></div>
 
     <!-- Videos Section -->
     <h2>Videos</h2>
     <hr>
-    <div class="gallery-grid">
-        <video class="gallery-item" onclick="openLightbox(2)">
-            <source src="images/gallery/fieldwork.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
-    </div>
+    <div class="gallery-grid" id="video-gallery"></div>
 </section>
 
 <!-- Lightbox (Hidden by Default) -->
