--- a/gallery.html
+++ b/gallery.html
@@ -28,26 +28,46 @@
     <h2>Images</h2>
     <hr>
     <div class="gallery-grid">
+        <!-- Example Image 1 -->
         <img 
             src="https://drive.google.com/uc?export=view&id=1o-cMnKZoqqr25Wjj6HUqjnX-9F-SCxFW" 
-            alt="Remus_Wellfleet" 
+            alt="Remus Wellfleet" 
             class="gallery-item"
             onclick="openLightboxWithImage('https://drive.google.com/uc?export=view&id=1o-cMnKZoqqr25Wjj6HUqjnX-9F-SCxFW')"
         />
 
-        <!-- Add more images here -->
+        <!-- Example Image 2 (Replace with actual File ID) -->
+        <img 
+            src="https://drive.google.com/uc?export=view&id=YOUR_IMAGE_FILE_ID" 
+            alt="Another Image" 
+            class="gallery-item"
+            onclick="openLightboxWithImage('https://drive.google.com/uc?export=view&id=YOUR_IMAGE_FILE_ID')"
+        />
+
+        <!-- Add more images below -->
     </div>
 
     <!-- Videos Section -->
     <h2>Videos</h2>
     <hr>
     <div class="gallery-grid">
+        <!-- Example Video 1 (Replace with actual File ID) -->
         <iframe 
             src="https://drive.google.com/file/d/YOUR_VIDEO_FILE_ID/preview" 
             width="640" 
             height="360" 
-            class="gallery-item"
-        ></iframe>
+            class="gallery-item">
+        </iframe>
+
+        <!-- Example Video 2 -->
+        <iframe 
+            src="https://drive.google.com/file/d/YOUR_SECOND_VIDEO_FILE_ID/preview" 
+            width="640" 
+            height="360" 
+            class="gallery-item">
+        </iframe>
+
+        <!-- Add more videos below -->
     </div>
 </section>
 
