--- a/gallery.html
+++ b/gallery.html
@@ -28,20 +28,19 @@
     <h2>Images</h2>
     <hr>
     <div class="gallery-grid">
-        <!-- Example Image 1 -->
+        <!-- Replace YOUR_IMAGE_FILE_ID with actual Google Drive File IDs -->
         <img 
-            src="https://drive.google.com/uc?export=view&id=1o-cMnKZoqqr25Wjj6HUqjnX-9F-SCxFW" 
-            alt="Remus Wellfleet" 
+            src="https://drive.google.com/uc?export=view&id=YOUR_IMAGE_FILE_ID_1" 
+            alt="Image Description 1" 
             class="gallery-item"
-            onclick="openLightboxWithImage('https://drive.google.com/uc?export=view&id=1o-cMnKZoqqr25Wjj6HUqjnX-9F-SCxFW')"
+            onclick="openLightboxWithImage('https://drive.google.com/uc?export=view&id=YOUR_IMAGE_FILE_ID_1')"
         />
 
-        <!-- Example Image 2 (Replace with actual File ID) -->
         <img 
-            src="https://drive.google.com/uc?export=view&id=YOUR_IMAGE_FILE_ID" 
-            alt="Another Image" 
+            src="https://drive.google.com/uc?export=view&id=YOUR_IMAGE_FILE_ID_2" 
+            alt="Image Description 2" 
             class="gallery-item"
-            onclick="openLightboxWithImage('https://drive.google.com/uc?export=view&id=YOUR_IMAGE_FILE_ID')"
+            onclick="openLightboxWithImage('https://drive.google.com/uc?export=view&id=YOUR_IMAGE_FILE_ID_2')"
         />
 
         <!-- Add more images below -->
@@ -51,17 +50,16 @@
     <h2>Videos</h2>
     <hr>
     <div class="gallery-grid">
-        <!-- Example Video 1 (Replace with actual File ID) -->
+        <!-- Replace YOUR_VIDEO_FILE_ID with actual Google Drive File IDs -->
         <iframe 
-            src="https://drive.google.com/file/d/YOUR_VIDEO_FILE_ID/preview" 
+            src="https://drive.google.com/file/d/YOUR_VIDEO_FILE_ID_1/preview" 
             width="640" 
             height="360" 
             class="gallery-item">
         </iframe>
 
-        <!-- Example Video 2 -->
         <iframe 
-            src="https://drive.google.com/file/d/YOUR_SECOND_VIDEO_FILE_ID/preview" 
+            src="https://drive.google.com/file/d/YOUR_VIDEO_FILE_ID_2/preview" 
             width="640" 
             height="360" 
             class="gallery-item">
