--- a/gallery.html
+++ b/gallery.html
@@ -30,10 +30,10 @@
     <div class="gallery-grid">
         <!-- Replace YOUR_IMAGE_FILE_ID with actual Google Drive File IDs -->
         <img 
-            src="https://drive.google.com/uc?export=view&id=YOUR_IMAGE_FILE_ID_1" 
-            alt="Image Description 1" 
+            src="https://drive.google.com/uc?export=view&id=1o-cMnKZoqqr25Wjj6HUqjnX-9F-SCxFW" 
+            alt="Remus Wellfleet" 
             class="gallery-item"
-            onclick="openLightboxWithImage('https://drive.google.com/uc?export=view&id=YOUR_IMAGE_FILE_ID_1')"
+            onclick="openLightboxWithImage('https://drive.google.com/uc?export=view&id=1o-cMnKZoqqr25Wjj6HUqjnX-9F-SCxFW')"
         />
 
         <img 
