--- a/gallery.html
+++ b/gallery.html
@@ -28,7 +28,7 @@
     <h2>Images</h2>
     <hr>
     <div class="gallery-grid" id="image-gallery">
-        <!-- ✅ Manually added images with correct Google Drive URLs -->
+        <!-- ✅ Corrected Google Drive URLs -->
         <img 
             src="https://drive.google.com/uc?export=view&id=1o-cMnKZoqqr25Wjj6HUqjnX-9F-SCxFW" 
             alt="Remus Wellfleet" 
@@ -63,8 +63,6 @@
             height="360" 
             class="gallery-item">
         </iframe>
-
-        <!-- Add more videos manually as needed -->
     </div>
 </section>
 
