--- a/about.html
+++ b/about.html
@@ -21,22 +21,25 @@
         <h1>Hey There!</h1>
         <p>I am a PhD student in Evolutionary Biology, passionate about understanding the mechanisms driving species adaptation and evolution.</p>
 
-       <div class="cta-buttons">
-    <a href="YOUR_GOOGLE_SCHOLAR_LINK" class="cta-button">Find me on Google Scholar →</a>
-    <a href="YOUR_RESEARCHGATE_LINK" class="cta-button">Find me on ResearchGate →</a>
-</div>
-
+        <div class="cta-buttons">
+            <a href="YOUR_GOOGLE_SCHOLAR_LINK" class="cta-button">Find me on Google Scholar →</a>
+            <a href="YOUR_RESEARCHGATE_LINK" class="cta-button">Find me on ResearchGate →</a>
+        </div>
     </div>
 
     <div class="about-image">
-        <img src="https://lh3.googleusercontent.com/d/1haZA-bNiSCq-AK4o5D5f50JwMvKnJyFo=w1000" alt="About Me">
+        <!-- ✅ Imgur Embed Code -->
+        <blockquote class="imgur-embed-pub" lang="en" data-id="Jcq7Gi3">
+            <a href="https://imgur.com/Jcq7Gi3">View post on imgur.com</a>
+        </blockquote>
+        <script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
     </div>
 </section>
 
-    <section class="cv-container">
-        <h2>Curriculum Vitae</h2>
-        <iframe src="cv.pdf" width="100%" height="600px"></iframe>
-    </section>
+<section class="cv-container">
+    <h2>Curriculum Vitae</h2>
+    <iframe src="cv.pdf" width="100%" height="600px"></iframe>
+</section>
 
 </body>
 </html>
