--- a/gallery.html
+++ b/gallery.html
@@ -28,22 +28,26 @@
     <h2>Images</h2>
     <hr>
     <div class="gallery-grid" id="image-gallery">
-        <!-- ✅ Corrected Google Drive URLs -->
-        <img 
-            src="https://drive.google.com/uc?export=view&id=1o-cMnKZoqqr25Wjj6HUqjnX-9F-SCxFW" 
-            alt="Remus Wellfleet" 
-            class="gallery-item"
-            onclick="openLightboxWithImage('https://drive.google.com/uc?export=view&id=1o-cMnKZoqqr25Wjj6HUqjnX-9F-SCxFW')"
-        />
+        <!-- ✅ Imgur Images (Click to View in Lightbox) -->
+        <a href="https://imgur.com/Ok2lGQH" target="_blank">
+            <img 
+                src="https://i.imgur.com/Ok2lGQH.jpg" 
+                alt="Remus Wellfleet" 
+                class="gallery-item"
+                onclick="openLightboxWithImage('https://i.imgur.com/Ok2lGQH.jpg')"
+            />
+        </a>
 
-        <img 
-            src="https://drive.google.com/uc?export=view&id=YOUR_IMAGE_FILE_ID_2" 
-            alt="Image Description 2" 
-            class="gallery-item"
-            onclick="openLightboxWithImage('https://drive.google.com/uc?export=view&id=YOUR_IMAGE_FILE_ID_2')"
-        />
+        <a href="https://imgur.com/YOUR_IMAGE_ID" target="_blank">
+            <img 
+                src="https://i.imgur.com/YOUR_IMAGE_ID.jpg" 
+                alt="Image Description 2" 
+                class="gallery-item"
+                onclick="openLightboxWithImage('https://i.imgur.com/YOUR_IMAGE_ID.jpg')"
+            />
+        </a>
 
-        <!-- Add more images manually as needed -->
+        <!-- Add more Imgur images as needed -->
     </div>
 
     <!-- Videos Section -->
