--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
     <div class="about-image">
         <!-- ✅ Imgur Embed Code -->
         <blockquote class="imgur-embed-pub" lang="en" data-id="Jcq7Gi3">
-            <a href="https://imgur.com/Jcq7Gi3">View post on imgur.com</a>
+            <a href="https://imgur.com/Jcq7Gi3"><img src="https://i.imgur.com/Jcq7Gi3.jpg" title="source: imgur.com" /></a>
         </blockquote>
         <script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
     </div>
