--- a/about.html
+++ b/about.html
@@ -5,6 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        /* ✅ Ensuring the image is a reasonable size */
+        .about-image img {
+            width: 300px;  /* Adjust size as needed */
+            height: auto;
+            border-radius: 10px;
+            display: block;
+            margin: 20px auto;
+            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+        }
+    </style>
 </head>
 <body>
 <nav>
@@ -12,10 +23,11 @@
         <li><a href="/Research_Notes/index.html">HOME</a></li>
         <li><a href="/Research_Notes/about.html">ABOUT</a></li>
         <li><a href="/Research_Notes/lab-notebook.html">NOTEBOOK</a></li>
-        <li><a href="/Research_Notes/posts.html">UPDATES</a></li> <!-- Change 'UPDATES' to your preferred name -->
+        <li><a href="/Research_Notes/posts.html">UPDATES</a></li>
         <li><a href="/Research_Notes/gallery.html">GALLERY</a></li>
     </ul>
 </nav>
+
 <section class="about-container">
     <div class="about-text">
         <h1>Hey There!</h1>
@@ -28,11 +40,8 @@
     </div>
 
     <div class="about-image">
-        <!-- ✅ Imgur Embed Code -->
-        <blockquote class="imgur-embed-pub" lang="en" data-id="Jcq7Gi3">
-            <a href="https://imgur.com/Jcq7Gi3"><img src="https://i.imgur.com/Jcq7Gi3.jpg" title="source: imgur.com" /></a>
-        </blockquote>
-        <script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+        <!-- ✅ Corrected Imgur Image -->
+        <img src="https://i.imgur.com/Jcq7Gi3.jpg" alt="About Me">
     </div>
 </section>
 
