--- a/about.html
+++ b/about.html
@@ -49,8 +49,8 @@
     <h2>Curriculum Vitae</h2>
     <iframe src="cv.pdf" width="100%" height="600px"></iframe>
 </section>
-<a href="https://yourwebsite.com" target="_blank">
-    <img src="https://imgur.com/rodeotoad-logo-3OIW4PL" alt="Logo" class="corner-logo">
+<a href="https://imgur.com/3OIW4PL" target="_blank">
+    <img src="https://i.imgur.com/3OIW4PL.png?1" alt="Logo" class="corner-logo">
 </a>
 
 </body>
