--- a/about.html
+++ b/about.html
@@ -50,9 +50,9 @@
     <iframe src="cv.pdf" width="100%" height="600px"></iframe>
 </section>
 <footer>
-    <a href="https://imgur.com/6GuZEMi" target="_blank" class="footer-logo">
+    <div class="footer-logo">
         <img src="https://i.imgur.com/6GuZEMi.png" alt="Logo">
-    </a>
+    </div>
 </footer>
 </body>
 </html>
