--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
         Welcome to My Research! Exploring the wonders of marine biology.
     </div>
 </section>
-
+<footer>
+    <div class="footer-logo">
+        <img src="https://i.imgur.com/6GuZEMi.png" alt="Logo">
+    </div>
+</footer>
 </body>
 </html>
