--- a/gallery.html
+++ b/gallery.html
@@ -131,6 +131,10 @@
         document.getElementById("lightbox").style.display = "none";
     }
 </script>
-
+<footer>
+    <div class="footer-logo">
+        <img src="https://i.imgur.com/6GuZEMi.png" alt="Logo">
+    </div>
+</footer>
 </body>
 </html>
