--- a/lab-notebook.html
+++ b/lab-notebook.html
@@ -20,6 +20,10 @@
     <h1>Lab Notebook</h1>
     <input type="text" id="search" placeholder="Search by keyword or date" onkeyup="filterEntries()">
     <div id="entries"></div>
-
+<footer>
+    <div class="footer-logo">
+        <img src="https://i.imgur.com/6GuZEMi.png" alt="Logo">
+    </div>
+</footer>
 </body>
 </html>
